# ai-academy-advisor

./: .env.example  .gitignore  README.md  docker-compose.yml  railway.json
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_academies_table.py  0002_add_tuition_monthly_fee.py  0003_create_review_and_engagement_tables.py
backend/app/: main.py
backend/app/api/: academies.py  engagement.py  recommendations.py  routes.py
backend/app/cli/: convert_registry.py  import_academies.py
backend/app/core/: config.py  constants.py  logging.py
backend/app/db/: session.py
backend/app/models/: __init__.py  academy.py  engagement.py  review.py
backend/app/providers/: __init__.py  base.py  factory.py  groq.py  stub.py
backend/app/repositories/: academy_repository.py  engagement_repository.py
backend/app/schemas/: academy.py  ai_recommendation.py  engagement.py
backend/app/services/: academy_import_service.py  academy_service.py  ai_recommendation_service.py  engagement_service.py  intent.py  recommendation_service.py
data/: README.md
data/academies/: misa-haneul-math.json  misa-hangyeol-math.json  misa-onnuri-math.json  misa-saebyeok-math.json  (+411 more)
docs/: api.md  architecture.md  data-strategy.md  database.md  decision-log.md  learning-log.md  project.md  roadmap.md
tests/: conftest.py  test_academies_api.py  test_ai_recommendations_api.py  test_convert_registry.py  test_engagement_api.py  test_health.py  test_importer.py  test_intent.py  test_new_models.py  test_providers.py  test_recommendations_api.py
(+5 files in other folders)
